# Pokemon-Cards-Price-Checker

./: .gitignore  LICENSE  README.md  pyproject.toml  test_env.py
schema/: tcg_card_prices.yaml  tcg_cards.yaml
schemas/analytics/: ebay_card_market_snapshot.yaml
schemas/processed/: card_master.yaml  card_price_variant_master.yaml  tcg_price_history.yaml  tcg_price_variant_master.yaml  weekly_top_tcg_cards.yaml
schemas/staging/: ebay_listings.yaml  tcg_cards.yaml
src/analytics/: ebay_card_market_snapshot_transform.py
src/analytics/duckdb/: bootstrap.py  card_detail.py  card_listings.py  duckdb_client.py  ebay_card_market_summary_transform.py  helpers.py  search.py  views.py
src/api/: main.py
src/api/schemas/: card_detail.py
src/ingestion/: pokemon_tcg_backfill.py  pokemon_tcg_ingestion.py  upload_raw_to_s3.py
src/ingestion/ebay/: ebay_auth.py  ebay_client.py  ebay_ingest.py  ebay_models.py  ebay_search.py
src/processing/: card_master_transform.py  card_price_variant_master_transform.py  ebay_filters.py  ebay_staging_transform.py  tcg_price_history_transform.py  tcg_staging_transform.py
src/processing/analytics/: latest_week_date.py  weekly_top_tcg_cards_transform.py
src/services/: card_listings_service.py  card_service.py  search_service.py
src/utils/: latest_top_tcg_week_date.py
