[project]
name = "pokemon-cards-price-checker"
version = "0.1.0"
description = "Data pipeline for collecting, storing, transforming and visualizing of Pokemon card price data"
authors = [
    {name = "Gene Lee"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "boto3 (>=1.42.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "duckdb (>=1.4.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
